# EchoX

./: Dockerfile  README.md  pyproject.toml
tests/: test_cli.py  test_exporters.py  test_speaker_wavs.py
whisperx_diarize/: __init__.py  __main__.py  audio_utils.py  cli.py  exporters.py  pipeline.py  types.py
whisperx_diarize/pipeline/: runner.py
